--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "streamTextExample": "ts-node src/stream-text-example",
     "dynamic-model": "ts-node src/dynamic-model",
-    "message-history": "ts-node src/message-history"
+    "message-history": "ts-node src/message-history",
+    "structured-outputs": "ts-node src/structured-outputs"
+
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
