--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dynamic-model": "ts-node src/dynamic-model",
     "message-history": "ts-node src/message-history",
     "structured-outputs": "ts-node src/structured-outputs",
-    "stream-structured-outputs": "ts-node src/stream-structured-outputs"
+    "stream-structured-outputs": "ts-node src/stream-structured-outputs",
+    "generate-enums": "ts-node src/generate-enums"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
