Generate Alt Text Done

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "message-history": "ts-node src/message-history",
     "structured-outputs": "ts-node src/structured-outputs",
     "stream-structured-outputs": "ts-node src/stream-structured-outputs",
-    "generate-enums": "ts-node src/generate-enums"
+    "generate-enums": "ts-node src/generate-enums",
+    "generate-alt-text": "ts-node src/generate-alt-text"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
