Generate Tools Done

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "stream-structured-outputs": "ts-node src/stream-structured-outputs",
     "generate-enums": "ts-node src/generate-enums",
     "generate-alt-text": "ts-node src/generate-alt-text",
-    "generate-embeddings": "ts-node src/generate-embeddings"
+    "generate-embeddings": "ts-node src/generate-embeddings",
+    "generate-tools": "ts-node src/generate-tools"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
