--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "stream-structured-outputs": "ts-node src/stream-structured-outputs",
     "generate-enums": "ts-node src/generate-enums",
     "generate-alt-text": "ts-node src/generate-alt-text",
+    "generate-raw-text": "ts-node src/generate-raw-text",
     "generate-embeddings": "ts-node src/generate-embeddings",
     "generate-tools": "ts-node src/generate-tools"
   },
